--- a/wercker.yml
+++ b/wercker.yml
@@ -20,7 +20,7 @@ release:
 
     # push docker image
     - internal/docker-push:
-      registry: https://hub.docker.com
+      registry: https://registry.hub.docker.com
       repository: weseek/growi
       image-name: my-new-image        # specify the image to be pushed - this is the one we created earlier
       tag: $TAGS_TO_PUSH
@@ -30,6 +30,11 @@ release:
   after-steps:
     - install-packages:
       packages: ruby
+
+    - wantedly/pretty-slack-notify:
+      webhook_url: $SLACK_WEBHOOK_URL
+      notify_on: "failed"
+      channel: ci
 
     - wantedly/pretty-slack-notify:
       webhook_url: $SLACK_WEBHOOK_URL
