modify notification settings

--- a/wercker.yml
+++ b/wercker.yml
@@ -39,7 +39,7 @@ release:
     - wantedly/pretty-slack-notify:
       webhook_url: $SLACK_WEBHOOK_URL
       notify_on: "passed"
-      passed_message: ":anchor: GROWI v$RELEASE_VERSION has been released!"
+      passed_message: ":anchor: GROWI v{$TAGS_TO_PUSH} has been released! -> https://hub.docker.com/r/weseek/growi/"
 
 addtag:
   steps:
