--- a/nocdn/Dockerfile
+++ b/nocdn/Dockerfile
@@ -30,7 +30,7 @@ RUN apk add --no-cache --virtual .build-deps git \
     && yarn cache clean \
     && apk del .build-deps
 
-COPY ../docker-entrypoint.sh /
+COPY docker-entrypoint.sh /
 RUN chmod +x /docker-entrypoint.sh
 
 VOLUME /data
