--- a/nocdn/Dockerfile
+++ b/nocdn/Dockerfile
@@ -21,9 +21,13 @@ COPY config/env.prod.js config
 
 # setup
 RUN apk add --no-cache --virtual .build-deps git \
+    && yarn config set network-timeout 300000 \
     && yarn \
     # install official plugins
-    && yarn add growi-plugin-lsx growi-plugin-pukiwiki-like-linker \
+    && yarn add growi-plugin-lsx growi-plugin-pukiwiki-like-linker growi-plugin-attachment-refs \
+    # install peerDependencies
+    && yarn add -D react-images react-motion \
+    # build
     && npm run build:prod \
     # shrink dependencies for production
     && yarn install --production \
